Committing version 1.2.6 - Bug Fix: mortgage calculator widgets weren't working when Tabbed Presentation was turned off in the settings. - Map width now can be set in % - just include % symbol into the width field on the Neighborhoods settings page. - CSS fix for themes that have broken tabs or tabs with bullets. - CSS fix for themes that have unintentionally extended footer caused by hidden tabbed information overflow (schools, yelp data). - CSS fix for checkbox selectors on the map to display them in concise fashion.
git-svn-id: https://plugins.svn.wordpress.org/simple-real-estate-pack-4/trunk@464410 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/srp.css
+++ b/css/srp.css
@@ -326,6 +326,11 @@ span.srp_amnt {
 #yelp_select input {
 	width: auto;
 }
+#yelp_select label {
+  font-size: inherit;
+  line-height: inherit;
+  display: inline;
+}
 
 #srp_walkscore #ws-walkscore-tile {
     margin: 1em auto;
@@ -431,6 +436,7 @@ a.poweredbysrp span{
 
 #srp_extension {
     position: relative;
+    overflow: hidden;
 }
 
 #srp_listing_details .propdata, #srp_listing_details .page-blurb, #srp_listing_details .propdata h4 {
