--- a/css/ui.tabs.css
+++ b/css/ui.tabs.css
@@ -14,6 +14,9 @@
 .ui-tabs .ui-tabs-nav li:before, .ui-tabs .ui-tabs-nav li:before {
     content: ""!important;
 }
+
+/*adding extra "body" selector line to assure third party themes don't override our tabs in an undesired way */
+body #srp-tab-wrap .ui-tabs .ui-tabs-nav li,
 .ui-tabs .ui-tabs-nav li {
 	float: left;
 	margin: 0 0.4em 0 0;
